hphp/test/zend/good/ext/intl/tests/resourcebundle_null_mandatory_args.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('intl')) die('skip intl extension not enabled');
if (version_compare(INTL_ICU_VERSION, '4.8') < 0) die('skip ICU >= 4.8 only');
if (version_compare(INTL_ICU_VERSION, '51.2') >=  0) die('skip for ICU < 51.2');
}
